# tg-sieve-filter

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
backend/app/bot/: __main__.py  listener.py  reply_formatter.py  routers.py
backend/app/bot/handlers/: filter_requests.py
backend/app/core/: config.py
backend/app/filters/: detector.py  mailbox.py  models.py  parser.py  renderer.py  storage.py  writer.py
backend/app/repositories/: state.py
backend/app/services/: filter_request_service.py
backend/app/telegram/: __main__.py  client.py  export_json.py  filters.py  listener.py  message_processor.py  service.py  transcript.py  update.py
backend/tests/: test_detector.py  test_export_json.py  test_mailbox_validator.py  test_parser.py  test_reply_formatter.py  test_storage.py  test_transcript.py  test_writer.py
backend/tests/fixtures/: chat_sample.txt  nexus_chat_sample.txt
docs/: RULE_DECISION_MATRIX.md
